--- a/Kinect/package.json
+++ b/Kinect/package.json
@@ -1,15 +1,9 @@
 {
-	"name": "webclient-express-server",
-	"version": "0.0.20",
-	"description": "show skeletons in browser",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Wouter Verweirder <wouter.verweirder@gmail.com>",
-	"license": "MIT",
 	"dependencies": {
 		"express": "~4.9.5",
-		"socket.io": "~1.1.0"
+		"socket.io": "~1.1.0",
+		"ardrone-autonomy": "0.1.2",
+		"ar-drone": "0.3.3",
+		"kinect2": "0.1.5"
 	}
 }
